2020-06-24  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac (PACKAGE_BUGZILLA): ac_define.
	* poke/poke.c (print_help): Use PACKAGE_BUGZILLA.
	* HACKING (The Bugzilla): Add a note about the bugzilla URL being
	defined in configure.ac.

2020-06-19  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/Makefile.am: Pass SHELL as a variable to runtest.
	* testsuite/lib/poke-dg.exp (poke-dg-test): Use SHELL to build the
	shebang of the test program.

2020-06-10  Aurélien Aptel  <aaptel@suse.com>

	* HACKING (Maintainers): New section.
	(Write After Approval): Add Aurélien Aptel.
	* AUTHORS: Likewise.

2020-06-08  Aurélien Aptel  <aaptel@suse.com>

	* etc/poke-mode.el: New file.
	* HACKING (Writing Poke): Mention poke-mode.

2020-06-06  Bruno Haible  <bruno@clisp.org>

	doc: Give users the freedom to use their own style in the HTML doc.
	* doc/Makefile.am (AM_MAKEINFOHTMLFLAGS): Remove variable.
	* HACKING (Building): Explain how to set a custom style in the HTML
	documentation.

2020-05-30  John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi: Miscellaneous minor corrections.

2020-05-30  John Darrington <john@darrington.wattle.id.au>

	* poke/poke.h (pk_fatal): Add noreturn attribute.

2020-05-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pk-val.c (pk_make_offset): Return PK_NULL if the
	arguments are not of the right type.

2020-05-25  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Compiler Passes and Phases): Update.
	(Transformation Phases): Likewise.
	(Analysis Phases): Likewise.

2020-05-24  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/ctf.pk (CTF_Type): Fix application of bit-concatenation
	in pretty_printer.
	(ctf_string): Use an Elf64_File instead of a header.
	(ctf_get_header): Likewise.

2020-05-17  Tim Rühsen  <tim.ruehsen@gmx.de>

	* gnulib: Update to master

2020-05-23  John Darrington <john@darrington.wattle.id.au>

	* poke/poke.c (pk_fatal): Call abort instead of exit.
	* libpoke/pkl.c (pklresolve_module): On lookup failure,